--- a/css/positioninfo.css
+++ b/css/positioninfo.css
@@ -7,9 +7,14 @@
 	overflow: hidden;
 	visibility: hidden;
 }
+.obscurer
+{
+	position: absolute;
+	background: red;
+}
 #canvas1,#canvas2,#canvas3
 {
-	position: absolute;		
+	position: absolute;
 }
 #canvas1
 {
